--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.14",
+    "vue-axios": "^3.3.7",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
