--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
